# python_dev_Abbasova_Elina

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: __init__.py  comments.py  general.py
app/database/: config.py  db1.py  db2.py  init_db.py  seed_data.py
app/models/db1/: __init__.py  author.py  base.py  blog.py  post.py  users.py
app/models/db2/: __init__.py  base.py  event_type.py  logs.py  space_type.py
app/schemas/: responses.py
app/services/: analytics.py
app/tests/: test_analytics.py
